blue_green_demo/header/mesh/hello1_virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: http-hello
  name: hello-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8001
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
# https://istio.io/latest/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: http-hello
  name: hello1-vs
spec:
  hosts:
    - "*"
  gateways:
    - hello-gateway
  http:
    - name: hello1-v1-route
      headers:
        request:
          add:
            target: blue-green11
      match:
        - port: 8001
        - headers:
            version:
              exact: v1
      route:
        - destination:
            host: hello1-svc
            subset: v1
          headers:
            response:
              add:
                version: v1
    - name: hello1-v2-route
      headers:
        request:
          add:
            target: blue-green12
      match:
        - port: 8001
        - headers:
            version:
              exact: v2
      route:
        - destination:
            host: hello1-svc
            subset: v2
          headers:
            response:
              add:
                version: v2
    - name: hello1-v3-route
      headers:
        request:
          add:
            target: blue-green13
      match:
        - port: 8001
        - headers:
            version:
              exact: v3
      route:
        - destination:
            host: hello1-svc
            subset: v3
          headers:
            response:
              add:
                version: v3
